# ExAai-SDK-resume-parser

./: .env.example  .gitignore  AI.md  CONTRACTS.md  Dockerfile  README.md  agent_platform.md  demo.py  deploy_path.md  explain.md  explanation.md  fix_ruff.py  flowchart.md  gui.py  implement.md  json-schema.md  progress.md  pyproject.toml  run_local_screen.py  scratch_fix2.py  scratch_fix_ruff.py  scratch_test.py  tmp_screen_body.json  tmp_screen_headers.txt
.ai/: active-features.md  architecture.md  conventions.md  database-schema.md  project-overview.md
.github/workflows/: ci.yml
agent/: __init__.py  adk_tools.py  agent.py  agent_engine_app.py  agent_runner.py  config.py  deferred_screening.py  enrichment.py  gcp_credentials.py  llm_client.py  logging_config.py  pipeline.py  prep.py  prep_context.py  sandbox_gating.py  screening_store.py  session_state.py  submit.py
agent/audit/: __init__.py  logger.py
agent/cache/: __init__.py  url_cache.py
agent/sandbox/: __init__.py  base.py  cloud_run_provider.py  focus_transport.py  models.py  providers.py  report_store.py
agent/schema/: __init__.py  models.py  resume-screening-result-v1.json  scoring-llm-response.json
agent/security/: __init__.py  allowlist.py  candidate_integrity.py  pii_redactor.py  (+2 more)
api/: auth.py  errors.py  file_validation.py  health.py  main.py  middleware.py  routes.py
docs/: AGENT_MIGRATION.md  ARCHITECTURE.md  link-identity-verification-parameters.md
scratch/: test_http_screen.py
scripts/: deploy_repo_evaluator.ps1  deploy_repo_evaluator.sh  run_dev.ps1  run_dev.sh
tests/: conftest.py
(+108 files in other folders)
