[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exaai-adk"
version = "0.1.0"
description = "Resume screening agent with Exa enrichment and Gemini scoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk[extensions]>=1.0.0",
    "litellm>=1.71.2",
    "google-generativeai>=0.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.5",
    "exa-py>=1.0.0",
    "jsonschema>=4.23.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "google-auth>=2.35.0",
    "google-cloud-storage>=2.18.0",
    "python-multipart>=0.0.12",
    "tree-sitter>=0.21.3",
    "tree-sitter-languages>=1.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "api"]

[tool.hatch.build.targets.wheel.force-include]
"agent/schema/resume-screening-result-v1.json" = "agent/schema/resume-screening-result-v1.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
